# media_control

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci-cd.yml
media_control/: __init__.py  app.py
media_control/templates/: index.html
src/media_control/: app.py
src/media_control/static/: index.css  keyboard.js
