[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "media_control"
version = "0.0.4"
authors = [{name = "sleepingsaint"}]
description = "Application to access media controls on your device"
readme = {file = "README.md", content-type = "text/markdown"}

[project.urls]
Repository = "https://github.com/sleepingsaint/media_control"

[project.scripts]
media_control = "media_control.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
media_control = ["static/*", "templates/*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }